--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "martfury_react_admin",
+  "name": "e-needz-admin",
   "version": "1.3.2",
   "private": true,
   "author": {
-    "name": "nouthemes"
+    "name": "Hossain"
   },
   "scripts": {
     "dev": "next dev",
