--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-images": "^1.1.0-beta.3",
     "react-lazyload": "^2.6.5",
     "react-redux": "^7.1.3",
+    "react-toastify": "^8.0.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
